--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,6 +17,7 @@ $large-breakpoint: 36rem;
   --font-size-large: 1.25rem;
   --font-size-root: 1.125rem;
   --font-size-small: .85rem;
+  --font-size-x-small: .77rem;
   --font-line-height: 1.5;
   --large-breakpoint: #{$large-breakpoint};
   --transition-duration: .2s;
