--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -29,7 +29,7 @@
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
         </a>
-        <div class="archive-date">{{ post.date | date: "%b %-d, %Y" }}</div>
+        <div class="archive-date">{{ post.date | date: "%B %-d, %Y" }}</div>
       </li>
       {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
       {% if maxRelatedCounter >= maxRelated %}
