--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -12,7 +12,7 @@ title: Tags
     <div class="tags__item">
       <a href="{{ post.url }}">{{ post.title }}</a>
       <div class="archive-date">
-        {{ post.date | date: "%b %-d, %Y" }}
+        {{ post.date | date: "%B %-d, %Y" }}
       </div>
     </div>
     {% endfor %}
