--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -29,20 +29,18 @@
     column-gap: 1.25rem;
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: var(--flow-space);
-    
-    @media (max-width: $large-breakpoint) {
-      margin-bottom: calc(var(--flow-space) / 2);
-    }
-    
+    margin-bottom: calc(var(--flow-space) / 2);
+
     .data {
-      --icon: calc(var(--font-size-small) * 1.20);
+      --h: 1.15;
+      --icon: calc(var(--font-size-small) * var(--h));
       color: var(--color-shades-primary-glare);
       display: flex;
+      font-size: calc(var(--font-size-small) * var(--h));
+      padding-bottom: calc(var(--flow-space) * .25);
       
       @media (max-width: $large-breakpoint) {
         font-size: var(--font-size-x-small);
-        padding-bottom: calc(var(--flow-space) * .25);
       }
  
       &::before {
@@ -50,13 +48,13 @@
         background-size: var(--icon);
         content: "";
         height: var(--icon);
-        margin-right: calc(var(--flow-space) * .35); 
+        margin-right: calc(var(--flow-space) * .35);
         width: var(--icon);
 
         @media (max-width: $large-breakpoint) {
-          background-size: 16px;
-          height: 16px;
-          width: 16px;
+          background-size: 15px;
+          height: 15px;
+          width: 15px;
         }
       }
 
@@ -71,10 +69,16 @@
           background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%2368778d' d='M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z'/%3E%3C/svg%3E");
         }
       }
-
+      
       &.reading-time {
         &::before {
           background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%2368778d' d='M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z'/%3E%3C/svg%3E");
+        }
+      }
+
+      &.views {
+        &::before {
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512' height='34' width='34'%3E%3Cpath fill='%2368778d' d='M288 80c-65.2 0-118.8 29.6-159.9 67.7C89.6 183.5 63 226 49.4 256c13.6 30 40.2 72.5 78.6 108.3C169.2 402.4 222.8 432 288 432s118.8-29.6 159.9-67.7C486.4 328.5 513 286 526.6 256c-13.6-30-40.2-72.5-78.6-108.3C406.8 109.6 353.2 80 288 80zM95.4 112.6C142.5 68.8 207.2 32 288 32s145.5 36.8 192.6 80.6c46.8 43.5 78.1 95.4 93 131.1c3.3 7.9 3.3 16.7 0 24.6c-14.9 35.7-46.2 87.7-93 131.1C433.5 443.2 368.8 480 288 480s-145.5-36.8-192.6-80.6C48.6 356 17.3 304 2.5 268.3c-3.3-7.9-3.3-16.7 0-24.6C17.3 208 48.6 156 95.4 112.6zM288 336c44.2 0 80-35.8 80-80s-35.8-80-80-80c-.7 0-1.3 0-2 0c1.3 5.1 2 10.5 2 16c0 35.3-28.7 64-64 64c-5.5 0-10.9-.7-16-2c0 .7 0 1.3 0 2c0 44.2 35.8 80 80 80zm0-208a128 128 0 1 1 0 256 128 128 0 1 1 0-256z'/%3E%3C/svg%3E");
         }
       }
     }
