--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -1,30 +1,11 @@
 <div class="social-media">
-  <div class="social-media__item">
-    <a href="{{ site.author.twitter }}" rel="external">
-      <div class="social__icon social__icon--twitter">
-        <div class="sr-only">Follow me on Twitter</div>
-      </div>
-    </a>
-  </div>
-  <div class="social-media__item">
-    <a href="{{ site.author.linkedin }}" rel="external">
-      <div class="social__icon social__icon--linkedin">
-        <div class="sr-only">Follow me on LinkedIn</div>
-      </div>
-    </a>
-  </div>
-  <div class="social-media__item">
-    <a href="{{ site.author.github }}" rel="external">
-      <div class="social__icon social__icon--github">
-        <div class="sr-only">Follow me on GitHub</div>
-      </div>
-    </a>
-  </div>
-  <div class="social-media__item">
-    <a href="{{ site.author.codepen }}" rel="external">
-      <div class="social__icon social__icon--codepen">
-        <div class="sr-only">Follow me on CodePen</div>
-      </div>
-    </a>
-  </div>
+  {% for item in site.data.org.social %}
+    <div class="social-media__item">
+      <a href="{{ item.url }}" rel="external">
+        <div class="social__icon social__icon--{{ item.short  }}">
+          <div class="sr-only">{{ item.name }}</div>
+        </div>
+      </a>
+    </div>
+  {% endfor %}
 </div>
