--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <div class="page-footer__item gap-bottom-top-base">
           {% include social-channels.html %}
         </div>
-        <div class="page-footer__item">&copy; {{ site.time | date: '%Y' }} {{ site.data.org.name }}. All rights reserved.</div>
+        <div class="page-footer__item">&copy; {{ site.time | date: '%Y' }} {{ site.data.persona.name }}. All rights reserved.</div>
         {% include scroll-to-top.html %}
       </footer>
     </div>
