--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <title>{% if page.title == "Home" %}{{ site.data.site.title }} - {{ site.data.site.tagline }}{% else %}{{ page.title }} - {{ site.data.site.title }}{% endif %}</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
+  <link rel="stylesheet" href="{{ site.data.site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
 
   {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
@@ -81,15 +81,15 @@
     <meta property="twitter:description" content="{{ site.data.site.description }}">
   {% endif %}
 
-  <link rel="icon" href="{{ site.baseurl }}/img/favicon/favicon.ico?v={{ site.time | date: '%s' }}" sizes="any">
-  <link rel="icon" href="{{ site.baseurl}}/img/favicon/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
-  <link rel="manifest" href="{{ site.baseurl }}/img/favicon//manifest.webmanifest">
+  <link rel="icon" href="{{ site.data.site.baseurl }}/img/favicon/favicon.ico?v={{ site.time | date: '%s' }}" sizes="any">
+  <link rel="icon" href="{{ site.data.site.baseurl}}/img/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="{{ site.data.site.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
+  <link rel="manifest" href="{{ site.data.site.baseurl }}/img/favicon//manifest.webmanifest">
   <meta name="theme-color" content="#f8f9fa">
 
   {% for item in site.data.org.social %}
     <link rel="me" href="{{ item.url }}">
   {% endfor %}
 
-  <link rel="alternate" type="application/atom+xml" title="{{ site.data.site.title }}" href="{{ site.baseurl }}/atom.xml">
+  <link rel="alternate" type="application/atom+xml" title="{{ site.data.site.title }}" href="{{ site.data.site.baseurl }}/atom.xml">
 </head>
