--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -1,21 +1,21 @@
 <section class="social-media">
   <h3>Share this post</h3>
   <div class="social-media__item">
-    <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.data.site.url }}{{ page.url }}&via={{ site.data.site.brand }}&related={{ site.data.site.brand }}" rel="nofollow" target="_blank">
+    <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.data.org.url }}{{ page.url }}&via={{ site.data.org.brand }}&related={{ site.data.org.brand }}" rel="nofollow" target="_blank">
       <div class="social__icon social__icon--twitter">
         <div class="sr-only">Share this post on Twitter</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
-    <a href="https://facebook.com/sharer.php?u={{ site.data.site.url }}{{ page.url }}" rel="nofollow" target="_blank">
+    <a href="https://facebook.com/sharer.php?u={{ site.data.org.url }}{{ page.url }}" rel="nofollow" target="_blank">
       <div class="social__icon social__icon--facebook">
         <div class="sr-only">Share this post on Facebook</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
-    <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.data.site.url }}{{ page.url }}&via={{ site.data.site.brand }}&related={{ site.data.site.brand }}" rel="nofollow" target="_blank">
+    <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.data.org.url }}{{ page.url }}&via={{ site.data.org.brand }}&related={{ site.data.org.brand }}" rel="nofollow" target="_blank">
       <div class="social__icon social__icon--reddit">
         <div class="sr-only">Share this post on Reddit</div>
       </div>
