--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,16 @@
           <a href="#content">Skip to main content</a>
         </div>
         <nav class="header-nav" aria-label="Main navigation">
-          <h1 class="header-nav__title"><a href="{{ site.data.site.baseurl }}/">{{ site.data.site.title }}</a></h1>
+          <h1 class="header-nav__title"><a href="{{ site.data.org.baseurl }}/">{{ site.data.org.title }}</a></h1>
           <ul class="header-nav__list">
             {% for item in site.data.nav %}
               <li class="header-nav__item">
-                <a href="{{ site.data.site.baseurl }}{{ item.link }}">{{ item.name }}</a>
+                <a href="{{ site.data.org.baseurl }}{{ item.link }}">{{ item.name }}</a>
               </li>
             {% endfor %}
           </ul>
         </nav>
-        <div class="heading__tagline">{{ site.data.site.tagline }}</div>
+        <div class="heading__tagline">{{ site.data.org.tagline }}</div>
       </header>
 
       <main id="content">
@@ -30,12 +30,12 @@
         <div class="page-footer__item gap-bottom-top-base">
           {% include social-channels.html %}
         </div>
-        <div class="page-footer__item">&copy; {{ site.time | date: '%Y' }} {{ site.data.site.title }}. All rights reserved.</div>
+        <div class="page-footer__item">&copy; {{ site.time | date: '%Y' }} {{ site.data.org.title }}. All rights reserved.</div>
         {% include scroll-to-top.html %}
       </footer>
     </div>
     
-    <script async src="{{ site.data.site.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"></script>
+    <script async src="{{ site.data.org.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"></script>
     <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
     {% if jekyll.environment == "production" %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.analytics.ga4Id }}"></script>
