--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -68,7 +68,10 @@ main {
   z-index: 100;
 
   &::after {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%23fff' d='M416 352c-8.188 0-16.38-3.125-22.62-9.375L224 173.3l-169.4 169.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25C432.4 348.9 424.2 352 416 352z'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,\
+      <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'>\
+        <path fill='%23fff' d='M416 352c-8.188 0-16.38-3.125-22.62-9.375L224 173.3l-169.4 169.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25C432.4 348.9 424.2 352 416 352z'/>\
+      </svg>");
     background-position: 50%;
     background-repeat: no-repeat;
     content: "";
