--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -1,5 +1,5 @@
 .social-media {
-  --gutter: 1.25rem;
+  --gutter: .75rem;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -10,6 +10,7 @@
     a {
       color: inherit;
       display: block;
+      padding: .5rem;
 
       &:hover {
         .social__icon {
@@ -18,7 +19,7 @@
       }
  
       .social__icon {
-        --icon: 26px;
+        --icon: 27px;
         background-color: var(--color-mid-text);
         height: var(--icon);
         transition: background-color ease var(--transition-duration);
@@ -26,7 +27,7 @@
         
         &--codepen {
           $svg: url("data:image/svg+xml,\
-            <svg width='26' height='26' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'>\
+            <svg width='27' height='27' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'>\
               <path d='M3.872 20.864l10.752 7.2v-6.432l-5.952-3.968zM2.752 18.304l3.456-2.304-3.456-2.304v4.608zM17.376 28.064l10.784-7.2-4.832-3.2-5.952 3.968v6.432zM16 19.264l4.864-3.264-4.864-3.264-4.864 3.264zM8.672 14.336l5.952-3.968v-6.432l-10.752 7.2zM25.792 16l3.456 2.304v-4.608zM23.328 14.336l4.832-3.2-10.784-7.2v6.432zM32 11.136v9.728q0 0.736-0.608 1.152l-14.624 9.76q-0.384 0.224-0.768 0.224t-0.768-0.224l-14.624-9.76q-0.608-0.416-0.608-1.152v-9.728q0-0.736 0.608-1.152l14.624-9.76q0.384-0.224 0.768-0.224t0.768 0.224l14.624 9.76q0.608 0.416 0.608 1.152z'></path>\
             </svg>");
           mask: $svg;
@@ -34,17 +35,16 @@
         
         &--linkedin {
           $svg: url("data:image/svg+xml,\
-            <svg width='24' height='26' viewBox='0 0 28 32' xmlns='http://www.w3.org/2000/svg'>\
+            <svg width='24' height='27' viewBox='0 0 28 32' xmlns='http://www.w3.org/2000/svg'>\
               <path d='M4.224 25.248h4.128v-12.384h-4.128v12.384zM8.64 9.024q-0.032-0.928-0.672-1.536t-1.632-0.608-1.696 0.608-0.672 1.536q0 0.928 0.64 1.536t1.664 0.608v0q1.056 0 1.696-0.608t0.672-1.536zM19.072 25.248h4.128v-7.104q0-2.752-1.312-4.16t-3.424-1.408q-2.432 0-3.744 2.080h0.032v-1.792h-4.128q0.064 1.184 0 12.384h4.128v-6.944q0-0.672 0.128-0.992 0.256-0.608 0.8-1.056t1.312-0.448q2.080 0 2.080 2.816v6.624zM27.424 7.424v17.152q0 2.112-1.504 3.616t-3.648 1.536h-17.12q-2.144 0-3.648-1.536t-1.504-3.616v-17.152q0-2.112 1.504-3.616t3.648-1.536h17.12q2.144 0 3.648 1.536t1.504 3.616z'></path>\
             </svg>");
-          //height: calc(var(--icon) + 2px);
           mask: $svg;
-          width: calc(var(--icon) - 2px);
+          width: 24px;
         }
         
         &--github {
           $svg: url("data:image/svg+xml,\
-            <svg width='26' height='26' viewBox='0 0 27 32' xmlns='http://www.w3.org/2000/svg'>\
+            <svg width='27' height='27' viewBox='0 0 27 32' xmlns='http://www.w3.org/2000/svg'>\
               <path d='M13.728 2.272q3.712 0 6.88 1.856t4.992 4.992 1.824 6.88q0 4.48-2.624 8.064t-6.752 4.96q-0.48 0.096-0.704-0.128t-0.224-0.544q0-0.032 0-1.376t0-2.4q0-1.728-0.928-2.528 1.024-0.096 1.824-0.32t1.696-0.704 1.44-1.184 0.96-1.856 0.352-2.688q0-2.144-1.408-3.68 0.672-1.632-0.128-3.648-0.512-0.16-1.472 0.192t-1.632 0.8l-0.672 0.416q-1.664-0.48-3.424-0.48t-3.456 0.48q-0.256-0.192-0.736-0.48t-1.504-0.704-1.504-0.224q-0.8 2.016-0.16 3.648-1.408 1.536-1.408 3.68 0 1.504 0.384 2.656t0.928 1.888 1.44 1.184 1.664 0.704 1.824 0.32q-0.672 0.64-0.864 1.856-0.384 0.16-0.8 0.256t-1.024 0.096-1.152-0.384-0.992-1.12q-0.352-0.576-0.864-0.928t-0.896-0.448l-0.352-0.032q-0.384 0-0.512 0.064t-0.096 0.224 0.16 0.256 0.224 0.192l0.128 0.096q0.384 0.192 0.768 0.672t0.576 0.928l0.192 0.416q0.224 0.672 0.768 1.088t1.184 0.544 1.248 0.096 0.992-0.032l0.416-0.096q0 0.704 0 1.6t0.032 0.96q0 0.32-0.256 0.544t-0.704 0.128q-4.128-1.376-6.752-4.96t-2.624-8.064q0-3.744 1.856-6.88t4.96-4.992 6.912-1.856zM5.184 21.984q0.064-0.128-0.096-0.224-0.192-0.032-0.256 0.032-0.032 0.128 0.128 0.224t0.224-0.032zM5.76 22.592q0.128-0.096-0.032-0.288-0.192-0.16-0.288-0.064-0.128 0.096 0.032 0.288t0.288 0.064zM6.272 23.392q0.192-0.128 0-0.352-0.128-0.224-0.288-0.096-0.16 0.096 0 0.32t0.288 0.128zM7.040 24.128q0.128-0.128-0.064-0.32-0.224-0.224-0.352-0.064-0.16 0.16 0.064 0.352 0.192 0.192 0.352 0.032zM8.064 24.576q0.032-0.192-0.256-0.288-0.256-0.064-0.32 0.128t0.224 0.288q0.256 0.096 0.352-0.128zM9.184 24.672q0-0.224-0.32-0.192-0.288 0-0.288 0.192 0 0.224 0.32 0.192 0.288 0 0.288-0.192zM10.208 24.512q-0.032-0.224-0.32-0.16-0.288 0.032-0.256 0.256t0.32 0.128 0.256-0.224z'></path>\
             </svg>");
           mask: $svg;
@@ -52,7 +52,7 @@
         
         &--twitter {
           $svg: url("data:image/svg+xml,\
-            <svg width='25' height='25' viewBox='0 0 30 32' xmlns='http://www.w3.org/2000/svg'>\
+            <svg width='27' height='27' viewBox='0 0 30 32' xmlns='http://www.w3.org/2000/svg'>\
               <path d='M28.928 7.296q-1.184 1.728-2.88 2.976 0 0.256 0 0.736 0 2.336-0.672 4.64t-2.048 4.448-3.296 3.744-4.608 2.624-5.792 0.96q-4.832 0-8.832-2.592 0.608 0.064 1.376 0.064 4.032 0 7.168-2.464-1.888-0.032-3.36-1.152t-2.048-2.848q0.608 0.096 1.088 0.096 0.768 0 1.536-0.192-2.016-0.416-3.328-1.984t-1.312-3.68v-0.064q1.216 0.672 2.624 0.736-1.184-0.8-1.888-2.048t-0.704-2.752q0-1.568 0.8-2.912 2.176 2.656 5.248 4.256t6.656 1.76q-0.16-0.672-0.16-1.312 0-2.4 1.696-4.064t4.064-1.696q2.528 0 4.224 1.824 1.952-0.384 3.68-1.408-0.672 2.048-2.56 3.2 1.664-0.192 3.328-0.896z'></path>\
             </svg>");
           mask: $svg;
