--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -6,7 +6,7 @@ pre {
 code {
   background-color: var(--color-mid-bg);
   border: 1px solid var(--color-stroke);
-  padding: .15rem .25rem;
+  padding: 0.15rem 0.25rem;
 
   &:not([class]) {
     white-space: nowrap;
