--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -2,7 +2,7 @@
   color: var(--color-shades-primary-glare);
   display: flex;
   justify-content: center;
-  margin: 3rem 0;  
+  margin: 3rem 0;
 }
 
 .pagination__item {
@@ -15,7 +15,7 @@
   width: 50%;
 
   &:first-child:not(:last-child) {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   &:focus,
