--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -1,30 +1,30 @@
 .social-media {
-  --gutter: .75rem;
+  --gutter: 0.75rem;
   align-items: center;
   display: flex;
   justify-content: center;
-  
+
   &__item {
     margin: 0 var(--gutter);
 
     a {
       color: inherit;
       display: block;
-      padding: .5rem;
+      padding: 0.5rem;
 
       &:hover {
         .social__icon {
           background-color: var(--color-primary-info);
         }
       }
- 
+
       .social__icon {
         --icon: 27px;
         background-color: var(--color-mid-text);
         height: var(--icon);
         transition: background-color ease var(--transition-duration);
         width: var(--icon);
-        
+
         &--codepen {
           $svg: url("data:image/svg+xml,\
             <svg width='27' height='27' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'>\
@@ -32,7 +32,7 @@
             </svg>");
           mask: $svg;
         }
-        
+
         &--linkedin {
           $svg: url("data:image/svg+xml,\
             <svg width='24' height='27' viewBox='0 0 28 32' xmlns='http://www.w3.org/2000/svg'>\
@@ -41,7 +41,7 @@
           mask: $svg;
           width: 24px;
         }
-        
+
         &--github {
           $svg: url("data:image/svg+xml,\
             <svg width='27' height='27' viewBox='0 0 27 32' xmlns='http://www.w3.org/2000/svg'>\
@@ -49,7 +49,7 @@
             </svg>");
           mask: $svg;
         }
-        
+
         &--twitter {
           $svg: url("data:image/svg+xml,\
             <svg width='27' height='27' viewBox='0 0 30 32' xmlns='http://www.w3.org/2000/svg'>\
