--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,26 +2,19 @@
 $large-breakpoint: 36rem;
 
 :root {
-  --font-root-regular: 
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    "Helvetica Neue",
-    Oxygen-Sans,
-    Ubuntu,
-    Cantarell,
-    sans-serif;
-  --font-tertiary-regular: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+  --font-root-regular: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
+  --font-tertiary-regular: SFMono-Regular, Consolas, Liberation Mono, Menlo,
+    monospace;
 
   --font-size-large: 1.25rem;
   --font-size-root: 1.125rem;
-  --font-size-small: .85rem;
-  --font-size-x-small: .77rem;
+  --font-size-small: 0.85rem;
+  --font-size-x-small: 0.77rem;
   --font-line-height: 1.5;
   --large-breakpoint: #{$large-breakpoint};
-  --transition-duration: .2s;
-  
+  --transition-duration: 0.2s;
+
   --color-primary: #0b0c0c;
   --color-primary-info: #2962ff; // #0074d9;
   --color-shades-primary: #292930;
@@ -46,7 +39,7 @@ $large-breakpoint: 36rem;
   --color-code-quaternary-bright: #9cc598;
   --color-core-text: var(--color-primary);
   --color-primary-info-text: var(--color-primary-info);
-  --color-primary-info-bg: var(--color-shades-secondary-bright);  
+  --color-primary-info-bg: var(--color-shades-secondary-bright);
   --color-shades-primary-text: var(--color-shades-primary);
   --color-mid-text: var(--color-shades-gray);
   --color-mid-bg: var(--color-shades-light);
