--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   {% include head.html %}
 
   <body>
@@ -10,42 +9,62 @@
           <a href="#content">Skip to main content</a>
         </div>
         <nav class="header-nav" aria-label="Main navigation">
-          <h1 class="header-nav__title"><a href="{{ site.data.org.baseurl }}/">{{ site.data.org.title }}</a></h1>
+          <h1 class="header-nav__title">
+            <a href="{{ site.data.org.baseurl }}/">{{ site.data.org.title }}</a>
+          </h1>
           <ul class="header-nav__list">
             {% for item in site.data.nav %}
-              <li class="header-nav__item">
-                <a href="{{ site.data.org.baseurl }}{{ item.link }}">{{ item.name }}</a>
-              </li>
+            <li class="header-nav__item">
+              <a href="{{ site.data.org.baseurl }}{{ item.link }}"
+                >{{ item.name }}</a
+              >
+            </li>
             {% endfor %}
           </ul>
         </nav>
         <div class="heading__tagline">{{ site.data.org.tagline }}</div>
       </header>
 
-      <main id="content">
-        {{ content }}
-      </main>
+      <main id="content">{{ content }}</main>
 
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__item gap-bottom-top-base">
           {% include social-channels.html %}
         </div>
-        <div class="page-footer__item">&copy; {{ site.time | date: '%Y' }} {{ site.data.org.title }}. All rights reserved.</div>
-        {% include scroll-to-top.html %}
+        <div class="page-footer__item">
+          &copy; {{ site.time | date: '%Y' }} {{ site.data.org.title }}. All
+          rights reserved.
+        </div>
+        <button
+          class="scrollToTop"
+          aria-label="scroll to the top of the page"
+        ></button>
       </footer>
     </div>
-    
-    <script async src="{{ site.data.org.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"></script>
-    <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
-    {% if jekyll.environment == "production" %}
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.analytics.ga4Id }}"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
 
-        gtag('config', '{{ site.data.analytics.ga4Id }}');
-      </script>
+    <script
+      async
+      src="{{ site.data.org.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"
+    ></script>
+    <script
+      async
+      id="dsq-count-scr"
+      src="//allthingssmitty-com.disqus.com/count.js"
+    ></script>
+    {% if jekyll.environment == "production" %}
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id={{ site.data.analytics.ga4Id }}"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "{{ site.data.analytics.ga4Id }}");
+    </script>
     {% endif %}
   </body>
 </html>
