--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -1,13 +1,15 @@
-<aside class="related" role="complementary" aria-label="Recent posts"> 
+<aside class="related" role="complementary" aria-label="Recent posts">
   <h3 class="related__title">Recent posts</h3>
   <ul class="related__list">
     {% for post in site.posts limit:3 %}
-      <li class="related__item">
-        <a href="{{ site.data.org.baseurl }}{{ post.url }}">
-          {{ post.title }}
-        </a>
-        <div class="archive-date">{{ post.date | date_to_string }}</div>
-      </li>
+    <li class="related__item">
+      <a href="{{ site.data.org.baseurl }}{{ post.url }}"> {{ post.title }} </a>
+      <time
+        class="archive-date"
+        aria-label="Published on {{ post.date | date: '%B %-d, %Y' }}"
+        >{{ post.date | date_to_string }}</time
+      >
+    </li>
     {% endfor %}
   </ul>
 </aside>
