--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,44 +1,29 @@
 {% if site.related_posts != empty %}
-<aside class="related" role="complementary" aria-label="Related posts"> 
-
-  {% assign maxRelated = 3 %}
-  {% assign minCommonTags =  1 %}
-  {% assign maxRelatedCounter = 0 %}
+<aside class="related" role="complementary" aria-label="Related posts">
+  {% assign maxRelated = 3 %} {% assign minCommonTags = 1 %} {% assign
+  maxRelatedCounter = 0 %}
 
   <h3 class="related__title">Related posts</h3>
 
   <ul class="related__list">
-
-  {% for post in site.posts %}
-   
-    {% assign sameTagCount = 0 %}
-    {% assign commonTags = '' %}
-
-    {% for tag in post.tags %}
-      {% if post.url != page.url %}
-        {% if page.tags contains tag %}
-          {% assign sameTagCount = sameTagCount | plus: 1 %}
-          {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
-          {% assign commonTags = commonTags | append: tagmarkup %}
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
-    {% if sameTagCount >= minCommonTags %}
-      <li class="related__item">
-        <a href="{{ site.data.org.baseurl }}{{ post.url }}">
-          {{ post.title }}
-        </a>
-        <div class="archive-date">{{ post.date | date: "%B %-d, %Y" }}</div>
-      </li>
-      {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
-      {% if maxRelatedCounter >= maxRelated %}
-        {% break %}
-      {% endif %}
-    {% endif %}
-  {% endfor %}
+    {% for post in site.posts %} {% assign sameTagCount = 0 %} {% assign
+    commonTags = '' %} {% for tag in post.tags %} {% if post.url != page.url %}
+    {% if page.tags contains tag %} {% assign sameTagCount = sameTagCount |
+    plus: 1 %} {% capture tagmarkup %}
+    <span class="label label-default">{{ tag }}</span>
+    {% endcapture %} {% assign commonTags = commonTags | append: tagmarkup %}]
+    {% endif %} {% endif %} {% endfor %} {% if sameTagCount >= minCommonTags %}
+    <li class="related__item">
+      <a href="{{ site.data.org.baseurl }}{{ post.url }}"> {{ post.title }} </a>
+      <time
+        class="archive-date"
+        aria-label="Published on {{ post.date | date: '%B %-d, %Y' }}"
+        >{{ post.date | date: "%B %-d, %Y" }}</time
+      >
+    </li>
+    {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %} {% if
+    maxRelatedCounter >= maxRelated %} {% break %} {% endif %} {% endif %} {%
+    endfor %}
   </ul>
-
-
 </aside>
 {% endif %}
