--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -5,15 +5,20 @@ title: Tags
 
 <div class="page">
   <header class="page-header">
-    <h2 class="page-header__title page-header__title--sm">Posts about {{ page.tag }}</h2>
+    <h2 class="page-header__title page-header__title--sm">
+      Posts about {{ page.tag }}
+    </h2>
   </header>
   <section class="tags flow">
     {% for post in site.tags[page.tag] %}
     <div class="tags__item">
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <div class="archive-date">
+      <time
+        class="archive-date"
+        aria-label="Published on {{ post.date | date: '%B %-d, %Y' }}"
+      >
         {{ post.date | date: "%B %-d, %Y" }}
-      </div>
+      </time>
     </div>
     {% endfor %}
   </section>
