--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,6 +48,7 @@ a {
 .sr-only {
   border: none;
   clip: rect(0 0 0 0);
+  color: var(--color-shades-tertiary-bright);
   height: 1px;
   margin: -1px;
   overflow: hidden;
