--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 # only main files contain this front matter, not partials.
 ---
 
-@import "variables";
+@import "tokens";
 @import "base";
 @import "type";
 //@import "syntax";
