--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -51,7 +51,7 @@
   color: #009;
 } /* Generic.Prompt */
 .highlight .gs {
-  color: var(--color-primary);
+  color: var(--color-core-text);
 } /* Generic.Strong */
 .highlight .gu {
   color: #030;
