--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -1,5 +1,5 @@
 @mixin heading-styles {
-  color: var(--color-shades-primary);
+  color: inherit;
   font-weight: 600;
   line-height: 1.25;
   text-wrap: pretty;
