--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -19,7 +19,7 @@
       line-height: 1.75;
 
       .header-nav__title {
-        color: var(--color-shades-primary);
+        color: var(--color-shades-primary-text);
         font-size: var(--font-size-large);
         margin: 0;
       }
